[project]
name = "mcp-kms"
version = "0.1.0"
description = ""
authors = [
    {name = "Minseong Kim",email = "duruu841@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-mcp-adapters (>=0.1.10,<0.2.0)",
    "fastmcp (>=2.12.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
